@@ -1,3 +1,10 @@
+Tue Jan 23 02:46:36 2001  George Lebl <jirka@5z.com>
+
+	* gnome-dentry.c: include gnome-url.c, apply xalf patch from Peter
+	  ?strand <astrand@lysator.liu.se>, default to true, and fix a minor
+	  leak in addition to some beatuification of the patch before
+	  application (to be more in gnome style).
+
 Tue Dec 26 10:45:50 2000  George Lebl <jirka@5z.com>
 
 	* gnome-util.c (g_copy_vector):  Allow argument to be NULL, better
